@@ -4,6 +4,7 @@
 BZFlag 1.12.0  (was 1.11.x)
 ---------------------------
 
+* Autoteam changed to improve team-play - Alfredo Tupone
 * Fixed dropping flag while jumping from high places - Alfredo Tupone
 * Sorting Lag Stats by Lag Value - Alfredo Tupone
 * openGL context reloading bug fixed on SDL - Alfredo Tupone
